# hitair

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  itch.yml  release.yml
crates/hitair-core/: Cargo.toml
crates/hitair-core/src/: anime.rs  audio.rs  changelog.rs  config.rs  deezer.rs  desktop.rs  game.rs  lib.rs  lobby.rs  profile.rs  realtime.rs  session.rs  setup.rs  supa.rs  update.rs
crates/hitair-gui/: Cargo.toml  build.rs
crates/hitair-gui/src/: input.rs  main.rs  smoke.rs  theme.rs  ui.rs
crates/hitair-tui/: Cargo.toml
crates/hitair-tui/src/: app.rs  main.rs  ui.rs  update.rs
scripts/: changelog-section.sh  make-macos-app.sh  release.sh
src/: app.rs  audio.rs  config.rs  deezer.rs  game.rs  lobby.rs  main.rs  realtime.rs  supa.rs  ui.rs
supabase/: schema.sql
supabase/migrations/: 20260719211745_challenge_init.sql  20260720210000_lobby_lifecycle.sql
