[package]
name = "hitair"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.33"
rand = "0.10.2"
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
rodio = { version = "0.22.2", features = ["symphonia-mp3"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "1.1.3"

# Smaller, faster release binaries for distribution.
[profile.release]
strip = true        # drop symbols
lto = true          # link-time optimization
codegen-units = 1   # better optimization at the cost of compile time
