[workspace]
resolver = "3"
members = ["crates/hitair-core", "crates/hitair-tui", "crates/hitair-gui"]
# `cargo run` launches the GUI (the default app); the TUI is `-p hitair-tui`.
# Bare `cargo build/test/clippy` also scope to this — CI passes `--workspace`.
default-members = ["crates/hitair-gui"]

[workspace.package]
version = "0.10.0"
edition = "2024"

# Shared dependency versions/features — crates opt in with `dep.workspace = true`.
[workspace.dependencies]
anyhow = "1.0.104"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = { version = "0.35.0", features = ["image", "http"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
flate2 = "1.1.9"
futures = "0.3.33"
rand = "0.10.2"
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
rodio = { version = "0.22.2", features = ["symphonia-mp3"] }
rustls = "0.23"
self-replace = "1.5.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
tar = "0.4.46"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
toml = "1.1.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

# Smaller, faster release binaries for distribution (workspace-wide).
[profile.release]
strip = true        # drop symbols
lto = true          # link-time optimization
codegen-units = 1   # better optimization at the cost of compile time
