[package]
name = "hitair-gui"
description = "hitair — a desktop Songless music-guessing game (egui frontend)."
version.workspace = true
edition.workspace = true

[[bin]]
name = "hitair-gui"
path = "src/main.rs"

[dependencies]
hitair-core = { path = "../hitair-core" }
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
image.workspace = true
tokio.workspace = true
# Used by the relocated integration smokes (--smoke etc.).
rodio.workspace = true
serde_json.workspace = true

# Windows-only: embed the app icon into the .exe (its file/taskbar icon in
# Explorer). Only pulled in when building on a Windows host — no effect elsewhere.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
