[package]
name = "hitair-tui"
description = "hitair — a terminal Songless music-guessing game (ratatui frontend)."
version.workspace = true
edition.workspace = true

# Keep the shipped binary named `hitair` so install scripts + self-update work.
[[bin]]
name = "hitair"
path = "src/main.rs"

[dependencies]
hitair-core = { path = "../hitair-core" }
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
rodio.workspace = true
serde_json.workspace = true
tokio.workspace = true
